cmake_minimum_required(VERSION 3.12)
project(output)
add_subdirectory(app)
add_subdirectory(app_main)
add_subdirectory(1.two_search)
add_subdirectory(2.min_sub_length)
add_subdirectory(3.remove_element)
add_subdirectory(4.square_big)
add_subdirectory(5.remove_list_element)
add_subdirectory(6.is_vaild_ip)
add_subdirectory(7.convert_notvaild)
add_subdirectory(8.drink)
add_subdirectory(9.straight)
add_subdirectory(10.two_sum)
add_subdirectory(11.reverse_string)
add_subdirectory(12.reverse_word_in_string)
add_subdirectory(13.is_palindrome)
add_subdirectory(14.palindrome_num)
add_subdirectory(15.length_last_word)
add_subdirectory(16.path_encryption)
add_subdirectory(17.dynamic_pass)
add_subdirectory(18.remove_duplicates)
add_subdirectory(19.stringtoint)